finalizada a configuração das rotas e envio de arquivos, bem como a documentação swagger
